fix: make examples work again

--- a/docs/1.protoc-gen-gql.md
+++ b/docs/1.protoc-gen-gql.md
@@ -1,9 +1,11 @@
-# protoc-gen-gql
+# Plugin protoc-gen-gql
 
 `protoc-gen-gql` plugin will generate graphql files with extension `.graphqls`
 rather than go code which means it can be further used for any other language or framework.
 
-### Install:
+> :warning: The GraphQL objects will only be generated for the gRPC messages of other types that are used in a service either as a input value or a return value (For details check #1)
+
+## Install
 
 ```sh
 go install github.com/danielvladco/go-proto-gql/protoc-gen-gql@latest
@@ -17,7 +19,23 @@ So first add golang bin directory to the path if it's not already added (also ad
 export PATH=${PATH}:$(go env GOPATH)/bin
 ```
 
-### Example:
+## Usage
+Run the `protoc` command with the arguments for the installed plugin:
+
+Like this:
+
 ```sh
-protoc --gql_out=paths=source_relative:. -I=. -I=./example/ ./example/*.proto
+protoc --gql_out=<ADDITIONAL_ARGUMENTS>:<PATH> -I=./api -I=. ./example/codegen/api/pb/*.proto
+```
+
+Where `ADDITIONAL_ARGUMENTS` may be provided in the form of `key=value` separated by a comma.
+
+Possible additional arguments: 
+- `svc` bool - Use service annotations for nodes corresponding to a GRPC call.
+- `merge` bool - Merge all the proto files found in one directory into one graphql file.
+- `ext` string - Extension of the graphql file, Default: '.graphql' (default "graphql").
+
+## Example
+```sh
+protoc --gql_out=svc=true:. -I=./api -I=. ./example/codegen/api/pb/*.proto
 ```
