fix: make examples work again

--- a/docs/4.gateway.md
+++ b/docs/4.gateway.md
@@ -102,6 +102,6 @@ To run the demo example follow the next steps:
   - [x] Proto maps to GraphQL array of inputs for map entries
   - [x] Proto oneofs to GraphQL unions
   - [x] Proto oneofs to GraphQL directive attached to the fields that must be unique
-- [ ] Adapt OpenAPI to GraphQL #45
-- [ ] Adapt OpenRPC to GraphQL #46
-- [ ] Proxy GraphQL to GraphQL
+- [ ] Adapt OpenAPI to GraphQL [#45](https://github.com/danielvladco/go-proto-gql/issues/45)
+- [ ] Adapt OpenRPC to GraphQL [#46](https://github.com/danielvladco/go-proto-gql/issues/46)
+- [ ] Proxy GraphQL to GraphQL [#47](https://github.com/danielvladco/go-proto-gql/issues/47)
