--- a/docs/4.gateway.md
+++ b/docs/4.gateway.md
@@ -10,6 +10,7 @@ The requests to the gateway will be transformed on the fly to grpc servers witho
 or writing any code at all. See `examples/gateway` for usage more info.
 
 ## Config the gateway
+
 To configure the gateway create a `config.yaml` file and provide it to our gateway executable via `--config` flag.
 
 For example: `./gateway --config config.yaml`
@@ -66,9 +67,11 @@ grpc:
 ```
 
 ## Docker image
+
 A docker image with the gateway is also available with the latest tags:
 
 To run the gateway using docker run:
+
 ```sh
 docker run ghcr.io/danielvladco/go-proto-gql/gateway
 ```
@@ -78,30 +81,32 @@ docker run ghcr.io/danielvladco/go-proto-gql/gateway
 In this example we will spin up two gRPC servers and a gateway server that points to them.
 
 To run the demo example follow the next steps:
-- Go to `./example/gateway/` 
+
+- Go to `./example/gateway/`
 - Run `docker-compose up`
 - Navigate to `http://localhost:8080/playground` in your browser
 - Have fun sending requests to the gRPC servers directly from your browser!
 
 ## Supported features
+
 - [x] Run with TLS certificates
 - [x] Cors
 - [x] GRPC authentication
-  - [x] TLS authentication
-  - [ ] GRPC other authentication methods (more research required)
+    * [x] TLS authentication
+    * [ ] GRPC other authentication methods (more research required)
 - [x] GRPC reflection
 - [x] Proto files parsing
 - [x] Adapt gRPC to GraphQL
-  - [x] GRPC call to Mutation
-  - [x] GRPC call to Query
-  - [ ] GRPC stream to Subscription
-  - [x] Proto messages to GraphQL types
-  - [x] Proto messages to GraphQL inputs
-  - [x] Proto enums to GraphQL enums
-  - [x] Proto maps to GraphQL array of types for map entries
-  - [x] Proto maps to GraphQL array of inputs for map entries
-  - [x] Proto oneofs to GraphQL unions
-  - [x] Proto oneofs to GraphQL directive attached to the fields that must be unique
+    * [x] GRPC call to Mutation
+    * [x] GRPC call to Query
+    * [ ] GRPC stream to Subscription
+    * [x] Proto messages to GraphQL types
+    * [x] Proto messages to GraphQL inputs
+    * [x] Proto enums to GraphQL enums
+    * [x] Proto maps to GraphQL array of types for map entries
+    * [x] Proto maps to GraphQL array of inputs for map entries
+    * [x] Proto oneofs to GraphQL unions
+    * [x] Proto oneofs to GraphQL directive attached to the fields that must be unique
 - [ ] Adapt OpenAPI to GraphQL [#45](https://github.com/danielvladco/go-proto-gql/issues/45)
 - [ ] Adapt OpenRPC to GraphQL [#46](https://github.com/danielvladco/go-proto-gql/issues/46)
 - [ ] Proxy GraphQL to GraphQL [#47](https://github.com/danielvladco/go-proto-gql/issues/47)
